<resources>
    <string name="app_name">AndroidSliderMenuDemo</string>
    <string name="home">Home</string>
    <string name="account">Accunt</string>
    <string name="email">Email</string>
    <string name="more">More</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="on_of">on/of</string>
    <string name="close">off</string>
    <string name="open">on</string>
    <string name="lock">lock</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
</resources>