<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sidleMenuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/sidleMenuAccount"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
    <item
        android:id="@+id/sidleMenuEmail"
        android:icon="@drawable/ic_email"
        android:title="@string/email" />
    <item
        android:id="@+id/sidleMenuMore"
        android:icon="@drawable/ic_more_horiz"
        android:title="@string/more" />

    <item
        android:icon="@drawable/ic_power_settings"
        android:title="@string/on_of"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

    <item
        android:icon="@drawable/ic_unlock"
        android:title="@string/lock"
        app:actionLayout="@layout/switch_compat_layout" />
</menu>